# dm-colloquium-new

./: CMakeLists.txt  README.md  main.cpp
Algebras/: Integer.cpp  Integer.h  Natural.cpp  Natural.h  Polynimial.cpp  Polynimial.h  Polynomial.cpp  Polynomial.h  Rational.cpp  Rational.h
Modules/: modint.cpp  modint.h  modnat.cpp  modnat.h  modpoly.cpp  modpoly.h  modrat.cpp  modrat.h  parser.cpp  parser.h
Tests/: test_modint.cpp  test_modnat.cpp  test_modpoly.cpp  test_modrat.cpp
Web/: backend.cpp
Web/html/: index.html
